dpkg-www (2.57) UNRELEASED; urgency=medium

  * QA upload.
  * d/control:
    - Added Vcs-* fields.
    - Added ${misc:Depends}.
  * src/dpkg-www.8:
    - Fix hyphen-used-as-minus-sign.
    - Spelling fix.

 -- Jean-Michel Nirgal Vourgère <jmv_deb@nirgal.com>  Thu, 26 Mar 2015 10:14:10 +0100

dpkg-www (2.56) unstable; urgency=medium

  * QA upload.
  * Delete unwanted ':q' file.

 -- Jean-Michel Nirgal Vourgère <jmv_deb@nirgal.com>  Thu, 26 Mar 2015 09:28:56 +0100

dpkg-www (2.55) unstable; urgency=medium

  * QA upload:
    - d/control: Set maintainer address to QA.
  * Apache2.4 transition (Closes: #669735, #578237):
    - d/control: Build-depends on dh-apache2, change hard Depends on apache2
      to use of misc:Recommends.
    - d/rules: Add dh_apache2.
    - New d/dpkg-www.apache2 to handle apache configuration, renamed
      src/apache.conf to debian/dpkg-www.conf.
    - d/maintscript: rm_conffile in /etc/apache for apache1, mv_conffile to
      conf-available.
    - Makefile: No longer handling apache2 conf.
    - d/postinst: No longer handling apache2 conf. File deleted.

 -- Jean-Michel Nirgal Vourgère <jmv_deb@nirgal.com>  Wed, 25 Mar 2015 11:04:14 +0100

dpkg-www (2.54+nmu1) unstable; urgency=low

  * Non-maintainer upload.
  * Lintian-based changes:
    - Build-Depend on debhelper, clean-should-be-satisfied-by-build-depends
    - debian/compat:4, comment DH_COMPAT in rules, debian-rules-sets-DH_COMPAT
    - s/-$(MAKE)/$(MAKE)/ debian/rules as Makefile is always present
      + debian-rules-ignores-make-clean-error
  * Fixed bashisms in dpkg-www-installer (Closes: #468679).
    - Additionally changed the shebang of dpkg-www to sh, as it's bashisms-free

 -- Raphael Geissert <atomo64@gmail.com>  Fri, 30 May 2008 15:46:11 -0500

dpkg-www (2.54) unstable; urgency=low

  * Fixed parsing of dpkg -l headers in listFilter.
    Closes: #463871.

 -- Massimo Dal Zotto <dz@debian.org>  Mon, 04 Feb 2008 23:31:43 +0100

dpkg-www (2.53) unstable; urgency=low
