@@ -2,7 +2,7 @@ Source: dpkg-www
 Section: doc
 Priority: optional
 Maintainer: Debian QA Group <packages@qa.debian.org>
-Build-Depends: debhelper (>= 4.1.16), dh-apache2
+Build-Depends: debhelper (>= 9), dh-apache2
 Standards-Version: 3.5.8
 Vcs-Git: git://anonscm.debian.org/collab-maint/dpkg-www.git
 Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/dpkg-www.git
