@@ -1,0 +1,1 @@
+/usr/share/man/man8/dpkg-www.8.gz /usr/share/man/man8/dpkg-www-installer.8.gz
