@@ -1,102 +1,7 @@
 #!/usr/bin/make -f
-# Sample debian/rules that uses debhelper.
-# GNU copyright 1997 to 1999 by Joey Hess.
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-# This is the debhelper compatibility version to use.
-#export DH_COMPAT=4
-
-
-
-CFLAGS = -Wall -g
-
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
-ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
-	INSTALL_PROGRAM += -s
-endif
-
-configure: configure-stamp
-configure-stamp:
-	dh_testdir
-	# Add here commands to configure the package.
-
-	touch configure-stamp
-
-
-build: build-stamp
-
-build-stamp: configure-stamp 
-	dh_testdir
-
-	# Add here commands to compile the package.
-	$(MAKE)
-
-	touch build-stamp
-
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp configure-stamp
-
-	# Add here commands to clean up after the build process.
-	$(MAKE) clean
-
-	dh_clean
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
-
-	# Add here commands to install the package into debian/dpkg-www.
-	$(MAKE) install DESTDIR=$(CURDIR)/debian/dpkg-www
-
-
-# Build architecture-independent files here.
-binary-indep: build install
-	dh_testdir
-	dh_testroot
-	# dh_installdebconf	
-	dh_installdocs
-	# dh_installexamples
-	dh_installmenu
-	# dh_installlogrotate
-	# dh_installemacsen
-	# dh_installpam
-	dh_installmime
-	# dh_installinit
-	# dh_installcron
-	dh_installman
-	for f in dpkg-www-installer; do \
-	    ln -s dpkg-www.8.gz \
-		  $(CURDIR)/debian/dpkg-www/usr/share/man/man8/$$f.8.gz; \
-	done
-	# dh_installinfo
-	# dh_undocumented
-	dh_installchangelogs 
-	dh_apache2
-	# dh_link
-	# dh_strip
-	dh_compress
-	dh_fixperms
-	# dh_makeshlibs
-	dh_installdeb
-	# dh_perl
-	# dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-# Build architecture-dependent files here.
-binary-arch: build install
-# We have nothing to do by default.
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install configure
+%:
+	dh $@ --with apache2
