@@ -1,7 +1,9 @@
 dpkg-www (2.57) UNRELEASED; urgency=medium
 
   * QA upload.
-  * d/control:
+  * Bumped compat level to 9.
+  * Minimize d/rules to use dh $@, create links using d/links.
+  * Other d/control changed:
     - Added Vcs-* fields.
     - Added ${misc:Depends}.
   * src/dpkg-www.8:
